@@ -1077,7 +1077,7 @@ function vboxSettingsStorageAddMedium(conElm, type) {
 		
 		buttons[trans('Create new disk','UIMessageCenter')] = function() {
 
-			$.when(new vboxWizardNewHDDialog({'path':vboxDirname($('#vboxSettingsDialog').data('vboxMachineData').settingsFilePath)+$('#vboxPane').data('vboxConfig').DSEP}).run())
+			$.when(new vboxWizardNewHDDialog({'path':vboxDirname($('#vboxSettingsDialog').data('vboxMachineData').settingsFilePath)+$('#vboxPane').data('vboxConfig').DSEP,vmName:$('#vboxSettingsDialog').data('vboxMachineData').name}).run())
 				.done(function(id){
 					if(!id) return;
 					mAttachToolbarHD.mediaMenu.menuUpdateRecent();
